Cleans/finalizes the menu layout and fixes the arrow button overlap bug

--- a/src/MainMenu/MainMenu.css
+++ b/src/MainMenu/MainMenu.css
@@ -38,7 +38,23 @@
       padding-top: 50px;
       padding-bottom: 70px;
   }
+
+  @media(max-width:950px){
+      .menu-bg{width:750px;
+
+      }
+  }
   
+  @media(max-width:500px){
+    .menu-bg{width:500px;
+    }
+    .menu-navbar-container{
+        display:flex;
+        flex-wrap: wrap;
+    }
+
+}
+
   .menu-navbar-container{
     text-align: center;
     padding-top: 30px;
